2.5.13 --> 2.5.14svn
====================

Bug fixes:

- MMTK.NormalModes.Core.reduceToRange() didn't work correctly for
  VibrationalModes.
- MMTK.Subspace.RigidMotionSubspace could fail for some object collections.

Improvements:

- MMTK.PDB.PDBConfiguration accepts optional arguments for model and
  alternate code.


2.5.12 --> 2.5.13
=================

License change: MMTK is now distributed under the CeCILL license. See
LICENSE (English) or LICENCE (French) for the license text, or
www.cecill.info for more information. In short, CeCILL is an OpenSource
license based on French law. It is compatible with the GPL, so the change
from GPL to CeCILL should not make a difference in practice.


2.5.11 --> 2.5.12
=================

New features:

- MMTK.Geometry.Box has new method cornerPoints() and implements
  intersectWith() for box-box-intersections.

2.5.10 --> 2.5.11
=================

Bug fixes:

- Some pickle files from pre-2.5 could not be read any more.
- MMTK_energy_term.c wouldn't compile with GCC 4, it has been regenerated
  with a corrected Pyrex

2.5.9 --> 2.5.10
================

Bug fixes:

- MMTK.Proteins.PeptideChain.replaceResidue() did not update the atom list
  of the universe.

- Compiler errors with gcc 4.0

Changes:

- Module "Collection" is now named "Collections" to avoid confusion with the
  class "Collection". Application code should not import that module directly,
  so there should be no compatibility issues.

2.5.8 --> 2.5.9
===============

Improvements:

- Subspace.RigidMotionSubspace avoids the costly SVD calculation by
  constructing an orthonormal basis immediately.
- Src/lapack_subset.c should compile with gcc 4 now.
- MMTK.Proteins.PeptideChain.replaceResidue() could only be used prior
  to the inclusion of the chain into a protein. Now it can be used later
  as well, permitting mutations.

2.5.7 --> 2.5.8
===============

Bug fix:

- Bugs concerning storing certain force field terms in trajectory descriptions.